--- a/css/bans.css
+++ b/css/bans.css
@@ -21,7 +21,7 @@ body {
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 8px;
     padding: 20px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 
 /* Table Styles */
@@ -84,15 +84,16 @@ button:hover {
     background: #007bb5;
 }
 
-/* Switch Styles */
+/* Toggle Switch Styles */
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 50px;
+    height: 26px;
+    vertical-align: middle;
 }
 
-.switch input {
+.switch-input {
     opacity: 0;
     width: 0;
     height: 0;
@@ -100,34 +101,34 @@ button:hover {
 
 .switch-label {
     position: absolute;
-    cursor: pointer;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     background-color: #ccc;
-    transition: 0.4s;
-    border-radius: 34px;
+    transition: .4s;
+    border-radius: 24px;
 }
 
 .switch-handle {
     position: absolute;
-    top: 4px;
     left: 4px;
-    width: 26px;
-    height: 26px;
+    top: 4px;
+    width: 16px;
+    height: 16px;
     background-color: white;
     border-radius: 50%;
-    transition: 0.4s;
+    transition: .4s;
 }
 
-input:checked+.switch-label {
+.switch-input:checked+.switch-label {
     background-color: #0C86F4;
 }
 
-input:checked+.switch-label .switch-handle {
+.switch-input:checked+.switch-label+.switch-handle {
     transform: translateX(26px);
 }
+
 
 /* Pagination */
 .pagination {
